samples/_failures_safe/1761469243_12421a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9100888f.c: In function ‘process_compression’:
./samples/SAFE/__tmp_9100888f.c:142:24: error: missing terminating " character
  142 |                 printf("Decompressed successfully: %.*s
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9100888f.c:142:17: error: expected expression at end of input
  142 |                 printf("Decompressed successfully: %.*s
      |                 ^~~~~~
./samples/SAFE/__tmp_9100888f.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9100888f.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9100888f.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9100888f.c:142:17: error: expected declaration or statement at end of input
